Project Arithmetic_Trainer {
    database_type: 'PostgreSQL'
    Note: '''
    # Arithmetic Trainer Database
    '''
}

Table problem_levels as levels {
  id uuid [primary key]
  title string
  description text [note: 'nullable']
  created_at timestamp
  updated_at timestamp
}

Table problem_branches as branches {
  id uuid [primary key]
  title string
  description text [note: 'nullable']
  created_at timestamp
  updated_at timestamp

}

Table problem_types as types {
  id uuid [primary key]
  title string
  description text [note: 'nullable']
  created_at timestamp
  updated_at timestamp
}

Table problems {
  id uuid [primary key]
  problem_level_id uuid [ref: > levels.id]
  problem_branch_id uuid [ref: > branches.id]
  problem_type_id uuid [ref: > types.id]
  text text
  solution text
  explanation text [note: 'nullable']
  references text [note: 'nullable']
  created_at timestamp
  updated_at timestamp
}

Table exercise_sessions as sessions {
  id uuid [primary key]
  user_id uuid [ref: > users.id]
  practice_session_problem_set_id uuid [
    ref: > practice_session_problem_sets.id,
    note: 'nullable'
    ]
  assessment_problem_set_id uuid [
    ref: > assessment_problem_sets.id,
    note: 'nullable'
    ]
  type string [note: '\'practice\', \'assessment\'']
  title string
  description text [note: 'nullable']
  start_time timestamp [default: 'now()']
  end_time timestamp [note: 'nullable']
  is_completed boolean
  created_at timestamp
  updated_at timestamp
}

Table practice_session_problem_sets {
  id uuid [primary key]
  session_id uuid [ref: > sessions.id]
  problem_id uuid [ref: > problems.id]
  created_at timestamp
  updated_at timestamp
}

Table practice_sessions_attempts {
  id uuid [primary key]
  session_id uuid [ref: > sessions.id]
  score tinyint
  created_at timestamp
  updated_at timestamp
}

Table assessments {
  id uuid [primary key]
  type string [note: '\'standard\', \'instructor_defined\', \'peer_defined\'']
  title string
  description text
  created_by uuid [ref: > users.id, note: 'nullable']
}

Table assessment_problem_sets {
  id uuid [primary key]
  assessment_id uuid [ref: > assessments.id]
  problem_id uuid [ref: > problems.id]
  created_at timestamp
  updated_at timestamp
}

Table assessment_session_attempts {
  id uuid [primary key]
  sessions_id uuid [ref: > sessions.id]
  score tinyint
  created_at timestamp
  updated_at timestamp
}

Table users {
  id uuid [primary key]
  username string
  email string
  password string
  created_at timestamp
  updated_at timestamp
}
